examples/test/testpolicy19343.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19343
  namespace: namespace388
spec:
  podSelector:
    matchLabels:
      key43: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value49
      podSelector:
        matchLabels:
          key32: value13
          key44: value46
